# ddpm-jax

./: .gitignore  colab-setup.sh  helper_plot.py  main.py  mnist.py  mnist_conv.py  models.py  pyproject.toml  scratch.py
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
ddpm_jax/: main.py  main_manual.py  models.py
tests/: test_ddpm.py  test_unet.py
