[tool.poetry]
name = "ddpm-jax"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
typer = "^0.4.0"
tqdm = "^4.62.3"
einops = "<0.7.0"
datasets = "^1.18.2"
einop = "^0.0.1"
# elegy = "^0.9.0.dev1"
elegy = {path = "../elegy", develop = true}
jax = "^0.3.7"
jaxlib = "^0.3.7"
tensorflow-cpu = "^2.8.0"
jupyter = "^1.0.0"
moviepy = "^1.0.3"
wandb = "^0.12.15"


[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}
debugpy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
